# swift-native

./: .editorconfig  .gitattributes  .gitignore  .swift-format  CONTRIBUTING.md  GETTING_STARTED.md  Package.swift  README.md  SETUP.md
.github/workflows/: ci.yml
Sources/CounterExample/: Counter.swift
Sources/SwiftNativeAndroid/: AndroidBackend.swift
Sources/SwiftNativeAppKit/: AppKitApp.swift  AppKitBackend.swift
Sources/SwiftNativeCore/: Components.swift  Geometry.swift  Layout.swift  Modifiers.swift  Mutation.swift  Node.swift  Primitives.swift  Reconciler.swift  RenderContext.swift  Runtime.swift  State.swift  View.swift
Sources/SwiftNativeTestRenderer/: TestBackend.swift
Sources/SwiftNativeTestSuite/: BuilderTests.swift  E2ETests.swift  Helpers.swift  IntegrationTests.swift  UnitTests.swift  main.swift
Sources/SwiftNativeTesting/: SwiftNativeTesting.swift
Sources/SwiftNativeUIKit/: UIKitBackend.swift
Sources/swiftnative/: CLI.swift  Commands.swift  Doctor.swift  Templates.swift  main.swift
Tests/SwiftNativeCoreTests/: CounterTests.swift  LayoutTests.swift  ReconcilerTests.swift
android-host/: build.gradle.kts  settings.gradle.kts
android-host/jni/: CMakeLists.txt  bridge.c
android-host/src/main/: AndroidManifest.xml
docs/: ARCHITECTURE.md  COMPONENTS.md  EXAMPLES.md
examples/: README.md
examples/TodoApp/: Package.swift
examples/TodoApp/Sources/TodoApp/: App.swift
examples/TodoApp/Sources/TodoApp/Screens/: AboutScreen.swift  TodoScreen.swift
scripts/: coverage.sh  test.sh
(+3 files in other folders)
